Added path shorter functionality in React Native

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
-    "jsx": "react-native"
+    "jsx": "react-native",
+    "baseUrl": "./",
+    "paths": {
+      "@instagram/*": ["src/*"]
+    }
   }
 }
