--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@rneui/themed": "^0.0.0-edge.2",
     "react": "18.3.1",
     "react-native": "0.76.0",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-image-crop-picker": "^0.41.4",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.35.0",
