--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "nodemailer": "^6.9.16"
   }
 }
