Handled config file in React Native

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
+    "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.76.0",
+    "react-native-config": "^1.5.3",
     "react-native-document-picker": "^9.3.1",
     "react-native-image-crop-picker": "^0.41.4",
     "react-native-reanimated": "^3.16.1",
