--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
     "axios": "^1.7.7",
+    "nodemon": "^3.1.7",
     "react": "18.3.1",
     "react-native": "0.76.0",
     "react-native-config": "^1.5.3",
