--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@react-native/eslint-config": "0.76.0",
     "@react-native/metro-config": "0.76.0",
     "@react-native/typescript-config": "0.76.0",
+    "@testing-library/react-native": "^12.8.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.7.0",
