--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-document-picker": "^9.3.1",
     "react-native-fs": "^2.20.0",
     "react-native-image-crop-picker": "^0.41.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.1",
