--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -19,6 +20,7 @@
     "axios": "^1.7.7",
     "nodemon": "^3.1.7",
     "react": "18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-native": "0.76.0",
     "react-native-config": "^1.5.3",
     "react-native-document-picker": "^9.3.1",
@@ -29,11 +31,13 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.35.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@babel/preset-typescript": "^7.26.0",
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "15.0.0-alpha.2",
@@ -50,9 +54,10 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "cypress": "^13.16.0",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "ts-jest": "^29.2.5",
     "typescript": "5.0.4"
   },
   "engines": {
