--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.76.0",
     "react-native-config": "^1.5.3",
     "react-native-document-picker": "^9.3.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-image-crop-picker": "^0.41.4",
