--- a/.env
+++ b/.env
@@ -1,3 +1,15 @@
 ACCESS_KEY=Instagram
-LOGINURL=http://localhost:5000/login
 JWT_SECRET=Instagram@123
+LOGIN=http://192.168.2.52:6452/login
+SIGNUP=http://192.168.2.52:6452/signup
+USERNAMEEXIST=http://192.168.2.52:6452/usernameexist
+USEREMAILEXIST=http://192.168.2.52:6452/useremailexist
+FEEDUPLOAD=http://192.168.2.52:6452/addposts
+FEEDLIST=http://192.168.2.52:6452/allposts
+DELETEACCOUNT=http://192.168.2.52:6452/deleteaccount
+DELETEPOST=http://192.168.2.52:6452/deletepost
+ALLUSERSLIST=http://192.168.2.52:6452/alluserslist
+USERDETAILS=http://192.168.2.52:6452/user
+UPDATEPROFILE=http://192.168.2.52:6452/updateprofile
+FOLLOWUSER=http://192.168.2.52:6452/follow
+UNFOLLOWUSER=http://192.168.2.52:6452/unfollow
