Changed auth apis paths for server 1 in Node js

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 ACCESS_KEY=Instagram
 JWT_SECRET=Instagram@123
-LOGIN=http://192.168.2.52:6452/login
-SIGNUP=http://192.168.2.52:6452/signup
-USERNAMEEXIST=http://192.168.2.52:6452/usernameexist
-USEREMAILEXIST=http://192.168.2.52:6452/useremailexist
+LOGIN=http://192.168.2.52:6452/api/Auth/login
+SIGNUP=http://192.168.2.52:6452/api/Auth/signup
+USERNAMEEXIST=http://192.168.2.52:6452/api/Auth/usernameexist
+USEREMAILEXIST=http://192.168.2.52:6452/api/Auth/useremailexist
 FEEDUPLOAD=http://192.168.2.52:6452/addposts
 FEEDLIST=http://192.168.2.52:6452/allposts
 DELETEACCOUNT=http://192.168.2.52:6452/deleteaccount
