Changed all apis paths for server 1 in Node js

--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@ LOGIN=http://192.168.2.52:6452/api/Auth/login
 SIGNUP=http://192.168.2.52:6452/api/Auth/signup
 USERNAMEEXIST=http://192.168.2.52:6452/api/Auth/usernameexist
 USEREMAILEXIST=http://192.168.2.52:6452/api/Auth/useremailexist
-FEEDUPLOAD=http://192.168.2.52:6452/addposts
-FEEDLIST=http://192.168.2.52:6452/allposts
-DELETEACCOUNT=http://192.168.2.52:6452/deleteaccount
-DELETEPOST=http://192.168.2.52:6452/deletepost
-ALLUSERSLIST=http://192.168.2.52:6452/alluserslist
-USERDETAILS=http://192.168.2.52:6452/user
-UPDATEPROFILE=http://192.168.2.52:6452/updateprofile
-FOLLOWUSER=http://192.168.2.52:6452/follow
-UNFOLLOWUSER=http://192.168.2.52:6452/unfollow
+FEEDUPLOAD=http://192.168.2.52:6452/api/Posts/addposts
+FEEDLIST=http://192.168.2.52:6452/api/Posts
+DELETEACCOUNT=http://192.168.2.52:6452/api/Users
+DELETEPOST=http://192.168.2.52:6452/api/Posts
+ALLUSERSLIST=http://192.168.2.52:6452/api/Users
+USERDETAILS=http://192.168.2.52:6452/api/Users
+UPDATEPROFILE=http://192.168.2.52:6452/api/Users
+FOLLOWUSER=http://192.168.2.52:6452/api/Users/follow
+UNFOLLOWUSER=http://192.168.2.52:6452/api/Users/unfollow
