Updated apis' routes in Server1

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 ACCESS_KEY=Instagram
 JWT_SECRET=Instagram@123
-LOGIN=http://192.168.2.52:6452/api/Auth/login
-SIGNUP=http://192.168.2.52:6452/api/Auth/signup
-USERNAMEEXIST=http://192.168.2.52:6452/api/Auth/usernameexist
-USEREMAILEXIST=http://192.168.2.52:6452/api/Auth/useremailexist
-FEEDUPLOAD=http://192.168.2.52:6452/api/Posts/addposts
-FEEDLIST=http://192.168.2.52:6452/api/Posts
-DELETEACCOUNT=http://192.168.2.52:6452/api/Users
-DELETEPOST=http://192.168.2.52:6452/api/Posts
-ALLUSERSLIST=http://192.168.2.52:6452/api/Users
-USERDETAILS=http://192.168.2.52:6452/api/Users
-UPDATEPROFILE=http://192.168.2.52:6452/api/Users
-FOLLOWUSER=http://192.168.2.52:6452/api/Users/follow
-UNFOLLOWUSER=http://192.168.2.52:6452/api/Users/unfollow
+LOGIN=http://192.168.2.52:6452/Auth/login
+SIGNUP=http://192.168.2.52:6452/Auth/signup
+USERNAMEEXIST=http://192.168.2.52:6452/Auth/usernameexist
+USEREMAILEXIST=http://192.168.2.52:6452/Auth/useremailexist
+FEEDUPLOAD=http://192.168.2.52:6452/Posts/addposts
+FEEDLIST=http://192.168.2.52:6452/Posts
+DELETEACCOUNT=http://192.168.2.52:6452/Users
+DELETEPOST=http://192.168.2.52:6452/Posts
+ALLUSERSLIST=http://192.168.2.52:6452/Users
+USERDETAILS=http://192.168.2.52:6452/Users
+UPDATEPROFILE=http://192.168.2.52:6452/Users
+FOLLOWUSER=http://192.168.2.52:6452/Users/follow
+UNFOLLOWUSER=http://192.168.2.52:6452/Users/unfollow
