ignored miscellaneous files of server2

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,10 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Exclude Visual Studio files
+.vs/
+
+# Exclude build output folders
+bin/
+obj/
